app_config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: default
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306  # The port on which MySQL is exposed
      targetPort: 3306  # The port that the MySQL container is listening on
  clusterIP: None  # This makes the service a headless service for stateful sets
